[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "Parameterized templates for Kubernetes manifests."
homepage = "https://github.com/jimmycuadra/ktmpl"
keywords = ["kubernetes"]
license = "MIT"
name = "ktmpl"
readme = "README.md"
repository = "https://github.com/jimmycuadra/ktmpl"
version = "0.7.0"

[[bin]]
doc = false
name = "ktmpl"

[dependencies]
base64 = "0.9.0"
clap = "2.30.0"
lazy_static = "1.0.0"
regex = "0.2.6"
yaml-rust = "0.4.0"
