[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "Parameterized templates for Kubernetes manifests."
homepage = "https://github.com/jimmycuadra/ktmpl"
keywords = ["kubernetes"]
license = "MIT"
name = "ktmpl"
readme = "README.md"
repository = "https://github.com/jimmycuadra/ktmpl"
version = "0.8.0"

[[bin]]
doc = false
name = "ktmpl"

[dependencies]
base64 = "0.10.1"
clap = "2.32.0"
lazy_static = "1.3.0"
regex = "1.1.2"
yaml-rust = "0.4.2"
